[package]
name = "ash-alloc"
version = "2.3.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>", "Fabien Cournoyer <fabien@cournoyer.club>"]
description = "A segregated list memory allocator for Vulkan, but for Ash"
license = "Zlib OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Super-Pizza/ash-alloc"
categories = ["rendering::graphics-api", "rendering"]
keywords = ["vk", "vulkan", "ash", "allocator", "memory"]
edition = "2021"

[dependencies]
ash = "0.38"
parking_lot = "0.12"
tracing1 = { version = "0.1", package = "tracing", default-features = false, optional = true }
profiling = { version = "1.0", optional = true }

[features]
tracing = ["tracing1"]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
vk-buffer-device-address = []

[dev-dependencies]
romu = { version = "0.6", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "registry",
] }
